--- a/simulators/grid_world/show_VI.ipynb
+++ b/simulators/grid_world/show_VI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulators.grid_world.grid_world import get_env, simulate_policy\n",
+    "from simulators.grid_world.grid_world import get_simple_env, simulate_policy\n",
     "from simulators.grid_world.VI_dynamic_programming import value_iteration\n",
     "from simulators.grid_world import GAMMA, HORIZON\n",
     "\n",
-    "env = get_env() \n",
+    "env = get_simple_env() \n",
     "Q_VI, expert_policy = value_iteration(env.P, env.R, GAMMA)"
    ]
   },
@@ -65,10 +65,10 @@
       "    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 800x572, 54912 kb/s, 5 tbr, 5 tbn, 5 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (rawvideo (native) -> h264 (libx264))\n",
-      "[libx264 @ 0x555e84844680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "[libx264 @ 0x555e84844680] profile High, level 3.1, 4:2:0, 8-bit\n",
-      "[libx264 @ 0x555e84844680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
-      "Output #0, mp4, to './videos/grid_world_expert.mp4':\n",
+      "[libx264 @ 0x5562aec1e680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x5562aec1e680] profile High, level 3.1, 4:2:0, 8-bit\n",
+      "[libx264 @ 0x5562aec1e680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "Output #0, mp4, to 'videos/simple_grid_world/expert.mp4':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.45.100\n",
       "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 800x572, q=-1--1, 5 fps, 10240 tbn, 5 tbc\n",
@@ -76,30 +76,30 @@
       "      encoder         : Lavc58.91.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
-      "frame=   16 fps=0.0 q=-1.0 Lsize=      11kB time=00:00:02.60 bitrate=  35.3kbits/s speed=6.33x    \n",
+      "frame=   16 fps=0.0 q=-1.0 Lsize=      11kB time=00:00:02.60 bitrate=  35.3kbits/s speed=8.79x    \n",
       "video:10kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 8.787879%\n",
-      "[libx264 @ 0x555e84844680] frame I:1     Avg QP: 6.42  size:  1452\n",
-      "[libx264 @ 0x555e84844680] frame P:14    Avg QP:19.11  size:   559\n",
-      "[libx264 @ 0x555e84844680] frame B:1     Avg QP:14.09  size:   596\n",
-      "[libx264 @ 0x555e84844680] consecutive B-frames: 87.5% 12.5%  0.0%  0.0%\n",
-      "[libx264 @ 0x555e84844680] mb I  I16..4: 98.7%  0.0%  1.3%\n",
-      "[libx264 @ 0x555e84844680] mb P  I16..4:  0.2%  0.8%  0.7%  P16..4:  0.1%  0.0%  0.0%  0.0%  0.0%    skip:98.3%\n",
-      "[libx264 @ 0x555e84844680] mb B  I16..4:  0.1%  0.3%  0.3%  B16..8:  1.1%  0.1%  0.0%  direct: 0.2%  skip:98.0%  L0:45.0% L1:55.0% BI: 0.0%\n",
-      "[libx264 @ 0x555e84844680] 8x8 transform intra:8.9% inter:5.3%\n",
-      "[libx264 @ 0x555e84844680] coded y,uvDC,uvAC intra: 4.6% 10.0% 9.2% inter: 0.0% 0.1% 0.1%\n",
-      "[libx264 @ 0x555e84844680] i16 v,h,dc,p: 96%  1%  3%  0%\n",
-      "[libx264 @ 0x555e84844680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu:  1%  1% 98%  0%  0%  0%  0%  0%  0%\n",
-      "[libx264 @ 0x555e84844680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 16% 13% 51%  9% 10%  1%  0%  1%  0%\n",
-      "[libx264 @ 0x555e84844680] i8c dc,h,v,p: 86%  7%  6%  1%\n",
-      "[libx264 @ 0x555e84844680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "[libx264 @ 0x555e84844680] ref P L0: 57.1%  0.0% 42.9%\n",
-      "[libx264 @ 0x555e84844680] ref B L0: 88.9% 11.1%\n",
-      "[libx264 @ 0x555e84844680] kb/s:24.68\n"
+      "[libx264 @ 0x5562aec1e680] frame I:1     Avg QP: 6.42  size:  1452\n",
+      "[libx264 @ 0x5562aec1e680] frame P:14    Avg QP:19.11  size:   559\n",
+      "[libx264 @ 0x5562aec1e680] frame B:1     Avg QP:14.09  size:   596\n",
+      "[libx264 @ 0x5562aec1e680] consecutive B-frames: 87.5% 12.5%  0.0%  0.0%\n",
+      "[libx264 @ 0x5562aec1e680] mb I  I16..4: 98.7%  0.0%  1.3%\n",
+      "[libx264 @ 0x5562aec1e680] mb P  I16..4:  0.2%  0.8%  0.7%  P16..4:  0.1%  0.0%  0.0%  0.0%  0.0%    skip:98.3%\n",
+      "[libx264 @ 0x5562aec1e680] mb B  I16..4:  0.1%  0.3%  0.3%  B16..8:  1.1%  0.1%  0.0%  direct: 0.2%  skip:98.0%  L0:45.0% L1:55.0% BI: 0.0%\n",
+      "[libx264 @ 0x5562aec1e680] 8x8 transform intra:8.9% inter:5.3%\n",
+      "[libx264 @ 0x5562aec1e680] coded y,uvDC,uvAC intra: 4.6% 10.0% 9.2% inter: 0.0% 0.1% 0.1%\n",
+      "[libx264 @ 0x5562aec1e680] i16 v,h,dc,p: 96%  1%  3%  0%\n",
+      "[libx264 @ 0x5562aec1e680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu:  1%  1% 98%  0%  0%  0%  0%  0%  0%\n",
+      "[libx264 @ 0x5562aec1e680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 16% 13% 51%  9% 10%  1%  0%  1%  0%\n",
+      "[libx264 @ 0x5562aec1e680] i8c dc,h,v,p: 86%  7%  6%  1%\n",
+      "[libx264 @ 0x5562aec1e680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
+      "[libx264 @ 0x5562aec1e680] ref P L0: 57.1%  0.0% 42.9%\n",
+      "[libx264 @ 0x5562aec1e680] ref B L0: 88.9% 11.1%\n",
+      "[libx264 @ 0x5562aec1e680] kb/s:24.68\n"
      ]
     }
    ],
    "source": [
-    "simulate_policy(expert_policy, \"grid_world_expert\", get_env(), HORIZON)"
+    "simulate_policy(expert_policy, \"simple_grid_world/expert.mp4\", env, HORIZON)"
    ]
   }
  ],
