--- a/tries.ipynb
+++ b/tries.ipynb
@@ -2,14 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from IPython.display import Video\n",
-    "\n",
     "from rlberry.envs import GridWorld\n",
     "\n",
     "\n",
@@ -38,6 +35,12 @@
     "      horizon: int\n",
     "          maximum number of timesteps in the environment.\n",
     "    \"\"\"\n",
+    "    from pyvirtualdisplay import Display\n",
+    "\n",
+    "    # To make the rendering possible\n",
+    "    display = Display(visible=0, size=(1400, 900))\n",
+    "    display.start()\n",
+    "\n",
     "    env.enable_rendering()\n",
     "    state = env.reset()  # get initial state\n",
     "    for timestep in range(horizon):\n",
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +96,9 @@
       "    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 800x572, 54912 kb/s, 5 tbr, 5 tbn, 5 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (rawvideo (native) -> h264 (libx264))\n",
-      "[libx264 @ 0x55ab9be58680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "[libx264 @ 0x55ab9be58680] profile High, level 3.1, 4:2:0, 8-bit\n",
-      "[libx264 @ 0x55ab9be58680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "[libx264 @ 0x5635eedc4680] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "[libx264 @ 0x5635eedc4680] profile High, level 3.1, 4:2:0, 8-bit\n",
+      "[libx264 @ 0x5635eedc4680] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mp4, to './videos/random.mp4':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.45.100\n",
@@ -104,25 +107,26 @@
       "      encoder         : Lavc58.91.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
-      "frame=   51 fps=0.0 q=-1.0 Lsize=      21kB time=00:00:09.60 bitrate=  17.6kbits/s speed=  22x    \n",
-      "video:19kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 6.095353%\n",
-      "[libx264 @ 0x55ab9be58680] frame I:1     Avg QP: 5.43  size:  1511\n",
-      "[libx264 @ 0x55ab9be58680] frame P:41    Avg QP:18.03  size:   420\n",
-      "[libx264 @ 0x55ab9be58680] frame B:9     Avg QP:11.16  size:    51\n",
-      "[libx264 @ 0x55ab9be58680] consecutive B-frames: 68.6% 19.6% 11.8%  0.0%\n",
-      "[libx264 @ 0x55ab9be58680] mb I  I16..4: 98.7%  0.1%  1.3%\n",
-      "[libx264 @ 0x55ab9be58680] mb P  I16..4:  0.1%  0.9%  0.5%  P16..4:  0.3%  0.0%  0.0%  0.0%  0.0%    skip:98.2%\n",
-      "[libx264 @ 0x55ab9be58680] mb B  I16..4:  0.1%  0.1%  0.0%  B16..8:  1.0%  0.0%  0.0%  direct: 0.0%  skip:98.8%  L0:23.2% L1:75.6% BI: 1.2%\n",
-      "[libx264 @ 0x55ab9be58680] 8x8 transform intra:22.9% inter:24.5%\n",
-      "[libx264 @ 0x55ab9be58680] coded y,uvDC,uvAC intra: 6.5% 14.0% 12.9% inter: 0.0% 0.0% 0.0%\n",
-      "[libx264 @ 0x55ab9be58680] i16 v,h,dc,p: 95%  1%  4%  0%\n",
-      "[libx264 @ 0x55ab9be58680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu:  2%  0% 98%  0%  0%  0%  0%  0%  0%\n",
-      "[libx264 @ 0x55ab9be58680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 15% 13% 51%  9% 10%  1%  0%  1%  1%\n",
-      "[libx264 @ 0x55ab9be58680] i8c dc,h,v,p: 87%  6%  5%  2%\n",
-      "[libx264 @ 0x55ab9be58680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "[libx264 @ 0x55ab9be58680] ref P L0: 20.0%  0.0% 76.3%  3.7%\n",
-      "[libx264 @ 0x55ab9be58680] ref B L0: 65.9% 29.3%  4.9%\n",
-      "[libx264 @ 0x55ab9be58680] kb/s:15.05\n"
+      "frame=   51 fps=0.0 q=-1.0 Lsize=      21kB time=00:00:09.60 bitrate=  18.2kbits/s speed=16.6x    \n",
+      "video:20kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 5.950189%\n",
+      "[libx264 @ 0x5635eedc4680] frame I:1     Avg QP: 5.47  size:  1511\n",
+      "[libx264 @ 0x5635eedc4680] frame P:41    Avg QP:14.61  size:   437\n",
+      "[libx264 @ 0x5635eedc4680] frame B:9     Avg QP:12.16  size:    59\n",
+      "[libx264 @ 0x5635eedc4680] consecutive B-frames: 68.6% 23.5%  0.0%  7.8%\n",
+      "[libx264 @ 0x5635eedc4680] mb I  I16..4: 98.7%  0.1%  1.3%\n",
+      "[libx264 @ 0x5635eedc4680] mb P  I16..4:  0.2%  0.7%  0.5%  P16..4:  0.2%  0.0%  0.0%  0.0%  0.0%    skip:98.3%\n",
+      "[libx264 @ 0x5635eedc4680] mb B  I16..4:  0.0%  0.1%  0.0%  B16..8:  1.1%  0.0%  0.0%  direct: 0.0%  skip:98.7%  L0:17.7% L1:81.7% BI: 0.6%\n",
+      "[libx264 @ 0x5635eedc4680] 8x8 transform intra:19.2% inter:16.7%\n",
+      "[libx264 @ 0x5635eedc4680] coded y,uvDC,uvAC intra: 7.2% 15.0% 13.8% inter: 0.0% 0.0% 0.0%\n",
+      "[libx264 @ 0x5635eedc4680] i16 v,h,dc,p: 95%  1%  4%  0%\n",
+      "[libx264 @ 0x5635eedc4680] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu:  1%  1% 97%  0%  0%  0%  0%  0%  0%\n",
+      "[libx264 @ 0x5635eedc4680] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 15% 13% 51%  9% 10%  0%  0%  0%  0%\n",
+      "[libx264 @ 0x5635eedc4680] i8c dc,h,v,p: 87%  6%  5%  2%\n",
+      "[libx264 @ 0x5635eedc4680] Weighted P-Frames: Y:0.0% UV:0.0%\n",
+      "[libx264 @ 0x5635eedc4680] ref P L0: 13.5%  0.0% 84.3%  2.2%\n",
+      "[libx264 @ 0x5635eedc4680] ref B L0: 79.1% 20.9%\n",
+      "[libx264 @ 0x5635eedc4680] ref B L1: 99.3%  0.7%\n",
+      "[libx264 @ 0x5635eedc4680] kb/s:15.65\n"
      ]
     },
     {
@@ -136,7 +140,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
