--- a/simulators/grid_world/simulate_algorithms.ipynb
+++ b/simulators/grid_world/simulate_algorithms.ipynb
@@ -574,7 +574,7 @@
     "diff_action_from_expert_penalisation = 0.8\n",
     "show_args = {\"show_policy\":True, \"show_value_function\": False, \"show_statistics\": True, \"display_frequency\": 200}\n",
     "\n",
-    "DQfD_Q, replay_buffer = tabular_DQfD(\n",
+    "DQfD_Q = tabular_DQfD(\n",
     "    env,\n",
     "    n_expert_trajectories,\n",
     "    n_step_td,\n",
