Push NAC forward

--- a/simulators/grid_world/tries.ipynb
+++ b/simulators/grid_world/tries.ipynb
@@ -23,27 +23,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'sample'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_27004/667476868.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m23\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'sample'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import copy \n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.distributions.categorical import Categorical\n",
+    "\n",
+    "\n",
+    "class SmallNAC(nn.Module):\n",
+    "    def __init__(self, env, entropy_weight):\n",
+    "        super(SmallNAC, self).__init__()\n",
+    "        self.env = env\n",
+    "        self.entropy_weight = entropy_weight\n",
+    "\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(3, 50), nn.ReLU(), nn.Linear(50, 1)  # 2 for the state and 1 for the action  # 1 for Q(s, a)\n",
+    "        )\n",
+    "\n",
+    "    def Q(self, state, action):\n",
+    "        (y, x) = self.env.index2coord[state]\n",
+    "\n",
+    "        return self.net(torch.tensor([x, y, action], dtype=torch.float32))\n",
+    "\n",
+    "    def V(self, state):\n",
+    "        v_value = 0\n",
+    "\n",
+    "        for action in self.env._actions:\n",
+    "            v_value += torch.exp(self.Q(state, action) / self.entropy_weight)\n",
+    "\n",
+    "        return self.entropy_weight * torch.log(v_value)\n",
+    "\n",
+    "    def pi(self, state):\n",
+    "        return self.pi_distribution(state).sample()\n",
+    "\n",
+    "    def pi_distribution(self, state):\n",
+    "        pi_actions = torch.zeros((self.env.Na))\n",
+    "\n",
+    "        for action in self.env._actions:\n",
+    "            pi_actions[action] = torch.exp((self.Q(state, action) - self.V(state)) / self.entropy_weight)\n",
+    "\n",
+    "        categorical = Categorical(probs=pi_actions)\n",
+    "\n",
+    "        return categorical\n",
+    "\n",
+    "    def copy(self):\n",
+    "        return copy.deepcopy(self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_losses(batch, model, target_model):\n",
+    "    actor_loss = 0\n",
+    "    critic_loss = 0\n",
+    "\n",
+    "    for (state, action, reward, next_state, entropy) in batch:\n",
+    "        # Actor's loss\n",
+    "        q_require_grad = model.Q(state, action)\n",
+    "        v_require_grad = model.V(state)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            v_target = target_model.V(next_state)\n",
+    "        \n",
+    "        actor_loss += (q_require_grad - v_require_grad) * (reward + model.env.gamma * v_target - q_require_grad.detach())\n",
+    "\n",
+    "        # Critic loss\n",
+    "        critic_loss += v_require_grad * (v_require_grad.detach() - (reward + model.env.gamma * v_target) + model.entropy_weight * entropy)\n",
+    "\n",
+    "    return actor_loss / len(batch), critic_loss / len(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReplayBuffer:\n",
+    "    def __init__(self, n_expert_samples):\n",
+    "        \n",
+    "\n",
+    "    def collect_rl_sample(self, model):\n",
+    "        pass \n",
+    "    \n",
+    "    def get_batch(self, from_expert=True):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "a = np.array([0, 1, 23])\n",
     "\n",
-    "a.sample()"
+    "def nac(env, n_expert_samples, n_expert_iterations, n_rl_iterations, update_target_frequecy):\n",
+    "    # from algorithms.NAC.replay_buffer import ReplayBuffer\n",
+    "    # from algorithms.NAC.model import SmallNAC\n",
+    "\n",
+    "    replay_buffer = ReplayBuffer(n_expert_samples)\n",
+    "    ReplayBuffer(\n",
+    "        env,\n",
+    "        n_expert_samples=n_expert_samples,\n",
+    "        expert_policy=expert_policy,\n",
+    "    )\n",
+    "    model = SmallNAC(env)\n",
+    "    target_model = model.copy()\n",
+    "\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "\n",
+    "    for iteration in range(n_expert_iterations + n_rl_iterations):\n",
+    "        from_expert = True if iteration < n_expert_iterations else False\n",
+    "\n",
+    "        if not from_expert:\n",
+    "            replay_buffer.collect_rl_sample(model)\n",
+    "\n",
+    "        batch = replay_buffer.get_batch(from_expert=from_expert)\n",
+    "\n",
+    "        actor_loss, critic_loss = get_losses(batch, model, target_model)\n",
+    "        loss = actor_loss + critic_loss\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        if iteration % update_target_frequecy == 0:\n",
+    "            target_model = model.copy()\n",
+    "\n",
+    "    return model"
    ]
   }
  ],
