--- a/simulators/grid_world/simulate_algorithms.ipynb
+++ b/simulators/grid_world/simulate_algorithms.ipynb
@@ -79,6 +79,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change reward to granular setting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
