--- a/experiments/expert_policy.ipynb
+++ b/experiments/expert_policy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from simulators.grid_world import HORIZON\n",
     "\n",
     "grid_type = \"simple\"\n",
+    "\n",
     "feature_type = \"one_hot\"\n",
     "dimensions = 124\n",
     "sigma = None\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,52 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.4462121 , 0.49579131, 0.4462121 , 0.49579131],\n",
-       "       [0.45335496, 0.55087932, 0.50293417, 0.55087932],\n",
-       "       [0.51007702, 0.6041517 , 0.55802217, 0.6041517 ],\n",
-       "       [0.56516503, 0.61129456, 0.61129456, 0.65540674],\n",
-       "       [0.98642783, 0.9928564 , 0.98642783, 0.97421355],\n",
-       "       [0.99999926, 0.99999926, 0.99999926, 0.99999926],\n",
-       "       [0.50293417, 0.55087932, 0.45335496, 0.55087932],\n",
-       "       [0.51007702, 0.6041517 , 0.51007702, 0.6041517 ],\n",
-       "       [0.56516503, 0.65540674, 0.56516503, 0.65540674],\n",
-       "       [0.61843742, 0.66254959, 0.61843742, 0.70442026],\n",
-       "       [0.96707069, 0.97928498, 0.97928498, 0.94964926],\n",
-       "       [0.97421355, 0.98642783, 0.9928564 , 0.97421355],\n",
-       "       [0.55802217, 0.6041517 , 0.51007702, 0.6041517 ],\n",
-       "       [0.56516503, 0.65540674, 0.56516503, 0.65540674],\n",
-       "       [0.61843742, 0.70442026, 0.61843742, 0.70442026],\n",
-       "       [0.66969245, 0.71156312, 0.66969245, 0.75094323],\n",
-       "       [0.9425064 , 0.95992783, 0.95992783, 0.92039855],\n",
-       "       [0.94964926, 0.96707069, 0.97928498, 0.94964926],\n",
-       "       [0.61129456, 0.65540674, 0.56516503, 0.65540674],\n",
-       "       [0.61843742, 0.70442026, 0.61843742, 0.70442026],\n",
-       "       [0.66969245, 0.75094323, 0.66969245, 0.75094323],\n",
-       "       [0.71870598, 0.75808609, 0.71870598, 0.79469891],\n",
-       "       [0.91325569, 0.93536355, 0.93536355, 0.88693005],\n",
-       "       [0.92039855, 0.9425064 , 0.95992783, 0.92039855],\n",
-       "       [0.66254959, 0.70442026, 0.61843742, 0.66254959],\n",
-       "       [0.66969245, 0.75094323, 0.66969245, 0.71156312],\n",
-       "       [0.71870598, 0.79469891, 0.71870598, 0.75808609],\n",
-       "       [0.76522895, 0.83537983, 0.76522895, 0.80184177],\n",
-       "       [0.80898463, 0.87264433, 0.84252268, 0.84252268],\n",
-       "       [0.84966554, 0.90611283, 0.90611283, 0.87978719],\n",
-       "       [0.88693005, 0.91325569, 0.93536355, 0.91325569]])"
+       "0.9999992612520906"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "expert_Q"
+    "expert_Q.max()"
    ]
   }
  ],
